# Blog_Project

./: .gitignore  MANIFEST.in  README.rst  category.json  sa.py
Blog_Project/: README.rst  setup.cfg
Blog_Project/blog/: __init__.py  api.py  db.py
blog/: __init__.py  api.py  auth.py  blog.py  db.py  post_list.html  profile.css  user.py
blog/static/css/: Style.css
blog/static/css/auth/: login.css  signup.css
blog/static/css/blog/: home.css  home2.css  post.css
blog/static/css/create_post/: create_post.css
blog/static/css/user/: create_post.css  edit_post.css  profile.css
blog/static/js/auth/: login.js
blog/static/js/blog/: category-tag.js  home.js  post.js
blog/static/js/create_post/: create_post.js
blog/static/js/home/: home.js
blog/static/js/user/: create_post.js  edit_post.js  profile.js
blog/templates/: base.html  create_post.html
blog/templates/auth/: login.html  signup.html
blog/templates/blog/: category.html  home.html  post.html  search-resault.html  tag.html
blog/templates/user/: create_post.html  edit_post.html  post_list.html  profile.html
blog_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
